; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_portals.c_FloodAreas.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_portals.c_FloodAreas.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"--- FloodAreas ---\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"%5i areas\0A\00", align 1
@c_areas = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FloodAreas(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = call i32 (i8*, ...) @Log_Print(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @FindAreas_r(i32 %6)
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @SetAreaPortalAreas_r(i32 %10)
  %12 = load i32, i32* @c_areas, align 4
  %13 = call i32 (i8*, ...) @Log_Print(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  ret void
}

declare dso_local i32 @Log_Print(i8*, ...) #1

declare dso_local i32 @FindAreas_r(i32) #1

declare dso_local i32 @SetAreaPortalAreas_r(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
